see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

19-May-2012 Jean-Marie Simonet
 # [#28419] Remove warnings for undeprecated code. Fix a bug in JView in the process. Thanks Rouven.

18-May-2012 Jean-Marie Simonet
 + Adding Laotian lo.gif flag to media/mod_languages

17-May-2012 Jean-Marie Simonet
 $ Updating installation ini files: ar-AA, de-DE, ja-JP, lv-LV, sq-AL, ta-IN

16-May-2012 Jean-Marie Simonet
 $ Updating installation ini files: bg-BG, ckb-IQ, da-DK, eo-XX, es-ES, fi-FI, fr-FR, it-IT, km-KH, lo-LA, mk-MK, ru-RU, sr-RS, sr-YU, sv-SE, uk-UA

15-May-2012 Jean-Marie Simonet
 #$ [#27651] JInstallationModelDatabase::initialise has hard coded MySQL version check. Thanks Michael

12-May-2012 Jean-Marie Simonet
 + [#28472] Add ability to copy a template. Thanks Mark
 +$ Adding eo-XX installation language

11-May-2012 Jean-Marie Simonet
 # [#27711] Plugin SEF don't support "poster" video attribute. Thanks Ryan
 # [#28481] Edit Menu Item: Modules appears multiple times in the list. Thanks Doesnt Matter.
 # [#28205] Remove 'Display: no' modules from Module Assignment list (1.7), or button to hide them. Thanks Jason Williams and Andrea. 
 # [#28514] duplicate line in user.php. Thanks Viet Vu
 # [#28421] Update PHPMailer to 5.2.1. Thanks Rouven.
 # [#28505] *Multilang validation errors when SEF is off
 # [#28479] Use most specific paths possible. Fix detect FTP root. Thanks Rouven.

30-Apr-2012 Jean-Marie Simonet
 # Correcting hathor xml
 # [#28453] Language override doesn't handle double quotes properly. Thanks Johannes.
 # [#28455] *303 when not using URL Language code in multilanguage. Thanks Yannick.